# offcenter_trading

./: .gitignore  CMakeLists.txt  README.md  build_trading.sh  offcenter-common-config.cmake.in
app/: CMakeLists.txt
app/admin_manager/: CMakeLists.txt
app/admin_manager/src/: AdminManager.cpp  AmqpDataElement.cpp  admin_manager.cpp
app/create_trading_db/: CMakeLists.txt
app/create_trading_db/src/: CreateTradingDBApp.cpp  create_trading_db.cpp
app/forex_persistence_manager/: CMakeLists.txt
app/forex_persistence_manager/include/: AmqpDataElement.hpp  AmqpExampleProgramOptions.hpp
app/forex_persistence_manager/src/: AmqpConsumerExampleApp.cpp  AmqpConsumerProducerExampleApp.cpp  AmqpProducerExampleApp.cpp  amqp_consumer.cpp  amqp_consumer_producer.cpp  amqp_producer.cpp
app/generate_sine_candlesticks/: CMakeLists.txt
app/generate_sine_candlesticks/src/: GenerateSineCandlesticksApp.cpp  GenerateSineCandlesticksApps.cpp  generate_sine_candlesticks_app.cpp
app/oanda_manager/: CMakeLists.txt
app/oanda_manager/src/: Constants.cpp  OandaManagerApp.cpp  oanda_manager.cpp
app/oanda_manager_simulation/: CMakeLists.txt
app/oanda_manager_simulation/include/: AmqpConsumerExampleApp.hpp  AmqpConsumerProducerExampleApp.hpp  AmqpDataElement.hpp  AmqpExampleOptions.hpp  AmqpExampleProgramOptions.hpp  AmqpProducerExampleApp.hpp
app/oanda_manager_simulation/src/: AmqpConsumerExampleApp.cpp  AmqpDataElement.cpp  amqp_consumer.cpp
app/oanda_persistence_manager/: CMakeLists.txt  oanda_persistence_manager.config.ini
app/oanda_persistence_manager/src/: OandaPersistenceManagerApp.cpp  oanda_persistence_manager.cpp
app/persist_oanda_candle_data/: CMakeLists.txt
app/persist_oanda_candle_data/src/: PersistOandaCandleDataApp.cpp  persist_oanda_candle_data_app.cpp
app/persist_oanda_forex_data_to_csv/include/: AmqpProducerExampleApp.hpp
app/persist_oanda_forex_data_to_csv/src/: AmqpConsumerProducerExampleApp.cpp  AmqpProducerExampleApp.cpp  PersistOandaForexDataToCSV.cpp  amqp_producer.cpp  persist_oanda_forex_data_to_csv.cpp
app/process_candlestick_hierarchy/: CMakeLists.txt
app/process_candlestick_hierarchy/src/: ProcessCandlestickHierarchyApp.cpp  process_candlestick_hierarchy_app.cpp
app/signal_current_candle/: CMakeLists.txt  signal_current_candle.config.ini
app/signal_current_candle/src/: SignalCurrentCandleApp.cpp  signal_current_candle_app.cpp
app/signal_current_candle_trigger/: CMakeLists.txt
app/signal_current_candle_trigger/src/: SignalCurrentCandleTriggerApp.cpp  signal_current_candle_trigger_app.cpp
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  offcenter_trading_common-config.cmake.in
lib/common/src/: Logging.cpp  Utility.cpp
lib/common/test/: CMakeLists.txt
lib/data_types/: CMakeLists.txt  offcenter_trading_data_types-config.cmake.in
lib/data_types/example/: CMakeLists.txt
lib/data_types/example/include/: GenerateSineCandlesticksExampleApp.hpp  GenerateSineCandlesticksExampleOptions.hpp  GenerateSineCandlesticksExampleProgramOptions.hpp  imgui_main.hpp
lib/data_types/example/src/: GenerateSineCandlesticksExampleApp.cpp  generate_sine_candlesticks_example.cpp
lib/data_types/src/: Broker.cpp  BrokerServer.cpp  CandlestickTimeRange.cpp  ForexDateTime.cpp  GenerateSineCandlesticks.cpp  OandaTradingDB.cpp  SOCIMySQLConnectionOptions.cpp  TradingDB.cpp
lib/data_types/src/calculation/: Candlestick.cpp
lib/data_types/src/common/: Candlestick.cpp
lib/data_types/test/: CMakeLists.txt
lib/data_types/test/src/: candlestick_test.cpp  date_time_test.cpp  generate_sine_candlesticks_test.cpp  main.cpp
lib/data_types_amqp/: CMakeLists.txt
lib/data_types_amqp/src/: CandlestickDataAmqp.cpp  CandlestickTimeRangeAmqp.cpp  InstrumentAmqp.cpp
lib/data_types_json/: CMakeLists.txt
lib/data_types_json/src/: DateTimeJson.cpp  FinancingDayOfWeekJson.cpp  InstrumentCountJson.cpp  InstrumentJson.cpp  JsonConversion.cpp
lib/data_types_soci/: CMakeLists.txt
lib/data_types_soci/src/: InstrumentSoci.cpp
lib/db/: createdb.sql  timeframe.sql
lib/db/orig/: bidask.sql  boringexciting.sql  candle.sql  candlesource.sql  charttimes.sql  charttimesdata.sql  colorchange.sql  direction.sql  exec.sh  formation.sql  instrument.sql  instrumentbasetimeframe.sql  instrumentdata.sql  instrumentquotedate.sql  instrumenttype.sql  instrumenttypedata.sql  monitoredinstrument.sql  p_boringexciting.sql  p_candleinfo.sql  p_combinedboringexciting.sql  properties.sql  propertiesdata.sql  removedb.sql  supplydemand.sql  t_boringexciting.sql  tick.sql  timeframedata.sql  timeframequote.sql  v_boringexciting.sql  v_candle_instrument_timeframe.sql  v_candledetail.sql  v_zoneretracementcount.sql  view_candle.sql  zone.sql  zoneentry.sql  zoneretracement.sql  zonestop.sql
lib/db/orig/analysis/: formation_count.sql
lib/db/orig/debug/: f_var_msg.sql  log.sql  p_clearlog.sql  p_emptymsg.sql  p_logvariable.sql  p_simplelog.sql
lib/db/orig/reports/: formation_counts.sql
lib/db/orig/storedprocs/: crossproximal.sql  findcandlesbetweentimes.sql  findcandlethatcontainstime.sql  first_zone_without_stops.sql  last_zone.sql  maxpricebetweentimes.sql  maxpricepastproximal.sql  p_candleaftercandle.sql  (+19 more)
lib/imgui_cmake/: CMakeLists.txt
lib/lib2/: CMakeLists.txt
lib/lib2/test/: CMakeLists.txt
lib/oanda_persistence_client/: CMakeLists.txt
lib/oanda_persistence_client/src/: LookupTableData.cpp  OandaPersistenceClient.cpp  OandaPersistenceEndpoints.cpp  ProcessInstrumentDataThread.cpp
lib/oanda_persistence_client/test/: CMakeLists.txt
lib/trading/: CMakeLists.txt
lib/trading/src/: Broker.cpp  BrokerServer.cpp  BuildCandlestick.cpp  BuildCandlesticks.cpp  BuildHigherTimeframeCandle.cpp  OandaTradingDB.cpp  ProcessCurrentCandleRange.cpp  SOCIMySQLConnectionOptions.cpp  Topics.cpp  TradingDB.cpp
lib/trading/test/: CMakeLists.txt
lib/trading_db/: CMakeLists.txt
lib/trading_db/src/: CreateTradingDB.cpp  OandaTradingDB.cpp  SOCIMySQLConnectionOptions.cpp  TradingDB.cpp  main.cpp
lib/trading_db/test/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: main.cpp
(+142 files in other folders)
