cmake_minimum_required (VERSION 3.5 FATAL_ERROR)

#add_subdirectory(calculate_correlations)
#add_subdirectory(calculate_indicators)
#add_subdirectory(calculate_timeframe_volume)
#add_subdirectory(ig)
#add_subdirectory(oanda)
#add_subdirectory(order_analyzer)
add_subdirectory(create_trading_db)
add_subdirectory(persist_oanda_candle_data)
add_subdirectory(admin_manager)
add_subdirectory(oanda_manager)
add_subdirectory(oanda_persistence_manager)
#add_subdirectory(forex_persistence_manager)
add_subdirectory(signal_current_candle)
add_subdirectory(signal_current_candle_trigger)
add_subdirectory(process_candlestick_hierarchy)
add_subdirectory(generate_sine_candlesticks)
