
# Global Libraries

add_subdirectory(data_types)
add_subdirectory(data_types_amqp)
add_subdirectory(data_types_json)
add_subdirectory(data_types_soci)
add_subdirectory(common)
add_subdirectory(oanda_persistence_client)
add_subdirectory(trading)
add_subdirectory(trading_db)
add_subdirectory(lib2)
#add_subdirectory(imgui_cmake)
